--- a/whereistime/res/layout/activity_main.xml
+++ b/whereistime/res/layout/activity_main.xml
@@ -1,28 +1,23 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent" 
-    android:orientation="vertical"
+<LinearLayout  
+    xmlns:android="http://schemas.android.com/apk/res/android"  
+    android:layout_width="fill_parent"  
+    android:layout_height="fill_parent"  
     >
-
-    <!-- <ScrollView
-        android:id="@+id/scrollview1"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" 
-        > -->
-		
-		<include layout="@layout/title_bar"/>
-	    
-	    <!-- 用于显示不同的view -->
-	    <ViewFlipper 
-	        android:id="@+id/viewFilpper"
-	        android:layout_width="match_parent"
-	    	android:layout_height="match_parent"
-	    	android:longClickable="true"
-	        >
-	    </ViewFlipper>
-    <!-- </ScrollView> -->
-
+    <!-- pageview里面必须有LinearLayout，这个写死了。 -->
+	<com.qiantu.whereistime.PageView 
+	    android:id="@+id/pageview"
+	    android:layout_width="wrap_content"  
+	    android:layout_height="fill_parent"  
+	    android:scrollbars="none" >  
+		    <LinearLayout
+		        android:layout_width="wrap_content"  
+		        android:layout_height="fill_parent"  
+		        android:orientation="horizontal" >
+		    </LinearLayout>
+	</com.qiantu.whereistime.PageView> 
+	
+	<!-- <include layout="@layout/title_bar"/> -->
+	
 </LinearLayout>
 
 
