--- a/whereistime/res/layout/activity_readme.xml
+++ b/whereistime/res/layout/activity_readme.xml
@@ -1,39 +1,38 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent" 
-    android:orientation="vertical"
+<FrameLayout 
+    xmlns:android="http://schemas.android.com/apk/res/android"  
+    android:layout_width="fill_parent"  
+    android:layout_height="fill_parent"  
     >
+    <!-- pageview里面必须有LinearLayout，这个写死了。 -->
+	<com.qiantu.whereistime.PageView 
+	    android:id="@+id/pageview"
+	    android:layout_width="wrap_content"  
+	    android:layout_height="fill_parent"  
+	    android:scrollbars="none" >  
+		    <LinearLayout
+		        android:layout_width="wrap_content"  
+		        android:layout_height="fill_parent"  
+		        android:orientation="horizontal" >
+		    </LinearLayout>
+	</com.qiantu.whereistime.PageView> 
+	<RelativeLayout  
+	    android:layout_width="fill_parent"  
+	    android:layout_height="fill_parent"  
+	    >
+	    <Button
+	        android:id="@+id/button_start"
+	        android:layout_width="match_parent"
+	        android:layout_height="48dp"
+	        android:layout_alignParentBottom="true"
+	        android:text="立即开启" 
+	        android:background="#669966"
+	        />
 		
-	    <!-- 用于显示不同的view -->
-	    <ViewFlipper 
-	        android:id="@+id/viewFilpper_readme"
-	        android:layout_width="match_parent"
-	    	android:layout_height="match_parent"
-	    	android:longClickable="true"
-	    	android:layout_weight="1"
-	        >
-
-	    </ViewFlipper>
-
-	    <LinearLayout
-	        android:layout_width="match_parent"
-	        android:layout_height="match_parent"
-	        android:orientation="vertical" 
-	    	android:layout_weight="10"
-	        >
-
-	        <Button
-	            android:id="@+id/button_start"
-	            android:layout_width="match_parent"
-	            android:layout_height="match_parent"
-	            android:text="立即开启" 
-	            android:background="#669966"
-	            />
-
-	    </LinearLayout>
-
-</LinearLayout>
+		<!-- <include layout="@layout/title_bar"/> -->
+		
+	</RelativeLayout>
+    
+</FrameLayout>
 
 
 
