--- a/whereistime/res/layout/activity_main.xml
+++ b/whereistime/res/layout/activity_main.xml
@@ -1,8 +1,12 @@
 <LinearLayout  
     xmlns:android="http://schemas.android.com/apk/res/android"  
     android:layout_width="fill_parent"  
-    android:layout_height="fill_parent"  
+    android:layout_height="fill_parent" 
+    android:orientation="vertical" 
     >
+    
+	<include layout="@layout/title_bar"/>
+	
     <!-- pageview里面必须有LinearLayout，这个写死了。 -->
 	<com.qiantu.whereistime.PageView 
 	    android:id="@+id/pageview"
@@ -15,9 +19,6 @@
 		        android:orientation="horizontal" >
 		    </LinearLayout>
 	</com.qiantu.whereistime.PageView> 
-	
-	<!-- <include layout="@layout/title_bar"/> -->
-	
 </LinearLayout>
 
 
