--- a/whereistime/res/layout/activity_readme.xml
+++ b/whereistime/res/layout/activity_readme.xml
@@ -4,7 +4,7 @@
     android:layout_height="fill_parent"  
     >
     <!-- pageview里面必须有LinearLayout，这个写死了。 -->
-	<com.qiantu.whereistime.PageView 
+	<com.miquan.view.PageView 
 	    android:id="@+id/pageview"
 	    android:layout_width="wrap_content"  
 	    android:layout_height="fill_parent"  
@@ -14,7 +14,7 @@
 		        android:layout_height="fill_parent"  
 		        android:orientation="horizontal" >
 		    </LinearLayout>
-	</com.qiantu.whereistime.PageView> 
+	</com.miquan.view.PageView> 
 	<RelativeLayout  
 	    android:layout_width="fill_parent"  
 	    android:layout_height="fill_parent"  
