--- a/whereistime/res/menu/main.xml
+++ b/whereistime/res/menu/main.xml
@@ -1,9 +1,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <item
-        android:id="@+id/action_system_exit"
+    <!-- <item
+        android:id="@+id/menu_setting"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="退出"/>
+        android:title="@string/menu_setting"/>
+    <item
+        android:id="@+id/menu_feedback"
+        android:orderInCategory="110"
+        android:showAsAction="never"
+        android:title="@string/menu_feedback"/> -->
+    <item
+        android:id="@+id/menu_exit"
+        android:orderInCategory="120"
+        android:showAsAction="never"
+        android:title="@string/menu_exit"/>
 
 </menu>
